--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 comet/
 
 
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -63,6 +64,7 @@ cover/
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
+settings.py
 
 # Flask stuff:
 instance/
